<resources>
    <string name="app_name">Vende Fácil</string>
    <string name="nome">Nome:</string>
    <string name="email">E-mail:</string>
    <string name="celular">Celular:</string>
    <string name="telefone">Telefone:</string>
    <string name="salvar">Salvar</string>
    <string name="mensagem_sucesso">Operação realizada com sucesso!</string>
    <string name="add_contato">Adicionar Contato</string>
    <string name="add_anuncio">Adicionar Anuncio</string>
    <string name="titulo">Título do Anuncio</string>
    <string name="descricao">Descricao do Anuncio</string>
    <string name="preco">Preço</string>
    <string name="anuncio">Anuncio</string>
    <string name="lista_anuncio">Lista de Anuncios</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="deseja_sair">Deseja realmente sair do app?</string>
    <string name="nao">NÃO</string>
    <string name="sim">SIM</string>
    <string name="deletar">Deletar</string>
    <string name="alterar">Alterar</string>
</resources>
