<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <ImageView
               android:layout_span="1"
               android:id="@+id/im_anuncio"
               android:layout_height="100dp"
               android:layout_width="100dp"
               android:src="@drawable/sem_foto"/>

            <LinearLayout
                android:layout_span="2"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/tv_titulo"
                    android:text="@string/titulo"
                    android:textSize="18dp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_descricao"
                    android:text="@string/descricao"
                    android:textSize="16dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_preco"
                    android:textAlignment="textEnd"
                    android:textSize="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/preco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>